test/Fail/Issue3262.err
Issue3262.agda:6,1-13,12: error: [Syntax.MissingWithClauses]
Missing with-clauses for function f
